commented out list and added table for Education and attended schools

--- a/index.html
+++ b/index.html
@@ -27,12 +27,38 @@
     <p>I am a Student at FAST University, Peshawar. I am doing my Bachelor's in Computer Science, which is the most prestigious program offered by FAST. Apart from my University courses I also focus on learning side skills. I am currently working on Website development using MERN stack and will soon become proficient in it. I also share my journey on my <a href="https://twitter.com/TechGuySaad">twitter</a>  account following the trend that is #100DaysOfCode</p>
     <hr />
     <h3>Education and Attended Schools</h3>
-    <ul>
+    <!-- <ul>
       <li>Qadims Lumiere School</li>
       <li>Peshawar Model School (Boys II)</li>
       <li>University College For Boys(UCB)</li>
       <li>FAST University, Peshawar.</li>
-    </ul>
+    </ul> -->
+    <table>
+      <thead>
+        <tr>
+          <th>Year</th>
+          <th>Institute</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2003</td>
+          <td>Qadims Lumiere School</td>
+        </tr>
+        <tr>
+          <td>2011 - 2015</td>
+          <td>Peshawar Model School (Boys II)</td>
+        </tr>
+        <tr>
+          <td>2015 -2017</td>
+          <td>University College For Boys(UCB)</td>
+        </tr>
+        <tr>
+          <td>2020 - 2024</td>
+          <td>FAST University, Peshawar.</td>
+        </tr>
+      </tbody>
+    </table>
     <h3>Hobbies</h3>
     <ol>
       <li>Football</li>
