added the dp and desc into a table

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <em>Bachelor of Computer Science </em>
           </p>
           <p>
-              <em>Junior Year</em>
+              <em>Junior Year.</em>
           </p>
           <p>
             <a href="http://pwr.nu.edu.pk/"><em>FAST University, Peshawar. </em></a>
