added cell spacing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Saad Rahman's Portfolio</title>
   </head>
   <body>
-    <table>
+    <table cellspacing=30px>
       <tr>
         <td><img src="dp-modified.png" alt="Saad's Display Picture"></td>
         <td><h1>Saad Rahman</h1>
