added a table of skills

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
       <li>Gaming</li>
       <li>Netflix</li>
     </ol>
+    <h3>Skills</h3>
+    <table border="solid">
+      <tr>
+        <td>Coding ★★★★☆</td>
+        <td>Web Devlopment ★☆☆☆☆☆</td>
+      </tr>
+
+      <tr>
+      <td>Flutter ★☆☆☆☆</td>
+      <td>Problem Solving ★★★☆☆</td>
+      </tr>
+      
+    </table>
+
     <h3>Contact Information</h3>
     <p><em>Saad Rahman</em></p>
     <p><em>Computer Science</em></p>
