cellspacing insted of border

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <li>Netflix</li>
     </ol>
     <h3>Skills</h3>
-    <table border="solid">
+    <table cellspacing="20px">
       <tr>
         <td>Coding ★★★★☆</td>
         <td>Web Devlopment ★☆☆☆☆☆</td>
