added horizontal rule and cellspacing changed

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </tr>
       </tbody>
     </table>
+    <hr>
     <h3>Hobbies</h3>
     <ol>
       <li>Football</li>
@@ -73,8 +74,9 @@
       <li>Gaming</li>
       <li>Netflix</li>
     </ol>
+    <hr>
     <h3>Skills</h3>
-    <table cellspacing="20px">
+    <table cellspacing="10">
       <tr>
         <td>Coding ★★★★☆</td>
         <td>Web Devlopment ★☆☆☆☆☆</td>
@@ -86,6 +88,7 @@
       </tr>
       
     </table>
+    <hr>
 
     <h3>Contact Information</h3>
     <p><em>Saad Rahman</em></p>
