added contact form and added link to index.html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <a href="https://twitter.com/TechGuySaad">Twitter</a>
     <a href="https://github.com/TechGuySaad">GitHub</a>
     <a href="https://www.facebook.com/saad.rahman.5621/">Facebook</a>
+    <a href="contact-form.html">Contact me</a>
 
   </body>
 </html>
