added inline css styling to body tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saad Rahman's Portfolio</title>
   </head>
-  <body>
+  <body style="background-color: #8FE3CF;">
     <table cellspacing=30px>
       <tr>
         <td><img src="dp-modified.png" alt="Saad's Display Picture"></td>
