replaced inline css with internal for body

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saad Rahman's Portfolio</title>
+
+    <style>
+      body{
+        background-color: #E8F9FD;
+      }
+    </style>
   </head>
-  <body style="background-color: #8FE3CF;">
+  <body >
     <table cellspacing=30px>
       <tr>
         <td><img src="dp-modified.png" alt="Saad's Display Picture"></td>
