hr bg color to white and bor style to none

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <title>Saad Rahman's Portfolio</title>
 
     <style>
+
       body{
         background-color: #E8F9FD;
       }
+
+      hr{
+        border-style: none;
+        background-color:white;
+        height: 2px;
+      }
+
+
     </style>
   </head>
   <body >
