made the dotted line in hr internal css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
       hr{
         border-style: none;
-        background-color:white;
-        height: 2px;
+        border-top-style: dotted ;
+        height:0;
+        width:5%;
+        border-width:5px;
+        border-color:grey;
+        
       }
 
 
