--- a/index.html
+++ b/index.html
@@ -4,26 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css">
     <title>Saad Rahman's Portfolio</title>
 
-    <style>
-
-      body{
-        background-color: #E8F9FD;
-      }
-
-      hr{
-        border-style: none;
-        border-top-style: dotted ;
-        height:0;
-        width:5%;
-        border-width:5px;
-        border-color:grey;
-        
-      }
-
-
-    </style>
+   
   </head>
   <body >
     <table cellspacing=30px>
