--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body >
     <table cellspacing=30px>
       <tr>
-        <td><img src="dp-modified.png" alt="Saad's Display Picture"></td>
+        <td><img src="images/dp-modified.png" alt="Saad's Display Picture"></td>
         <td><h1>Saad Rahman</h1>
           <p>
               <em>Bachelor of Computer Science </em>
