added two more divs of class middle and bottom

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 <body>
 
-  <div>
-    <h1>I'm Saad</h1>
+  <div class="top">
+    <h1 >I'm Saad</h1>
     <p>a programmer</p>
+  </div>
+
+  <div class="middle">
+
+  </div>
+
+  <div class="bottom">
+
   </div>
   
 </body>
