--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
 
-  <div class="top">
+  <div class="top-container">
     <h1 >I'm Saad</h1>
     <p>a programmer</p>
   </div>
 
-  <div class="middle">
+  <div class="middle-container">
 
   </div>
 
-  <div class="bottom">
+  <div class="bottom-container">
 
   </div>
   
