added mountains and clouds

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
 
   <div class="top-container">
+    <img src="images/cloud.png" alt="cloud-image">
     <h1 >I'm Saad</h1>
     <p>a programmer</p>
+    <img src="images/cloud.png" alt="cloud-image">
+    <img src="images/mountain.png" alt="cloud-image">
   </div>
 
   <div class="middle-container">
