--- a/index.html
+++ b/index.html
@@ -11,20 +11,14 @@
 <body>
 
   <div class="top-container">
-    <img src="images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
     <h1 >I'm Saad</h1>
     <p>a programmer</p>
-    <img src="images/cloud.png" alt="cloud-image">
-    <img src="images/mountain.png" alt="cloud-image">
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="mountain" src="images/mountain.png" alt="mountain-image">
   </div>
 
-  <div class="middle-container">
-
-  </div>
-
-  <div class="bottom-container">
-
-  </div>
+ 
   
 </body>
 </html>
