--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/icon.png" type="image/x-icon">
-  <title>Saad Rahman</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="images/icon.png" type="image/x-icon" />
+    <!-- importing font Merriweather-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap"
+      rel="stylesheet"
+    />
 
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
-    <h1 >I'm Saad</h1>
-    <p>a programmer</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-    <img class="mountain" src="images/mountain.png" alt="mountain-image">
-  </div>
+    <!-- importing font Sacramento -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
 
- 
-  
-</body>
+    <!-- importing font Montserrat -->
+
+    <title>Saad Rahman</title>
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
+      <h1>I'm Saad</h1>
+      <p>a programmer</p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
+      <img class="mountain" src="images/mountain.png" alt="mountain-image" />
+    </div>
+
+    <div class="red"></div>
+    <div class="blue"></div>
+  </body>
 </html>
