--- a/index.html
+++ b/index.html
@@ -35,7 +35,55 @@
       <img class="mountain" src="images/mountain.png" alt="mountain-image" />
     </div>
 
-    <div class="red"></div>
-    <div class="blue"></div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/saad2.png" alt="Saad's picture" />
+        <h2>Hello.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
+          Non auctor, montes nulla distinctio.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="" src="https://media3.giphy.com/media/QssGEmpkyEOhBCb7e1/giphy.gif?cid=ecf05e47jvat1z1a73lc56cscsd21l6sznh2qui5vxhyf1h6&rid=giphy.gif&ct=s" alt="" />
+          <h3>Lorem & Ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
+            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
+            nam, lectus ante, ut lorem eros.
+          </p>
+        </div>
+        <div class="skill-row">
+          <img class="" src="https://media3.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif?cid=ecf05e47l0fxjozvytlhy4bl2eywdt8do7ctdmzjpvsa0g81&rid=giphy.gif&ct=g" alt="" />
+         
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
+            eu, rutrum nam.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.
+        </p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/saad-rahman-59696a1bb/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/TechGuySaad">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© Name Surname.</p>
+    </div>
   </body>
 </html>
