--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
           Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
           tellus donec dui, ornare erat.
         </p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <a class="btn" href="mailto:saadreh5@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/saad-rahman-59696a1bb/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/TechGuySaad">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://techguysaad.github.io/personalblog.github.io/">Website</a>
       <p>© Name Surname.</p>
     </div>
   </body>
