--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
       <h1>I'm Saad</h1>
-      <p>a programmer</p>
+      <h2 class="description">a <span class="pro">pro</span>grammer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
       <img class="mountain" src="images/mountain.png" alt="mountain-image" />
     </div>
