--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="https://media3.giphy.com/media/QssGEmpkyEOhBCb7e1/giphy.gif?cid=ecf05e47jvat1z1a73lc56cscsd21l6sznh2qui5vxhyf1h6&rid=giphy.gif&ct=s" alt="" />
-          <h3>Lorem & Ipsum</h3>
-          <p>
+          <img class="skill-img" src="https://media3.giphy.com/media/QssGEmpkyEOhBCb7e1/giphy.gif?cid=ecf05e47jvat1z1a73lc56cscsd21l6sznh2qui5vxhyf1h6&rid=giphy.gif&ct=s" alt="" />
+          <h3 class="skill-text">Lorem & Ipsum</h3>
+          <p class="skill-text">
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
             Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
             nam, lectus ante, ut lorem eros.
           </p>
         </div>
         <div class="skill-row">
-          <img class="" src="https://media3.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif?cid=ecf05e47l0fxjozvytlhy4bl2eywdt8do7ctdmzjpvsa0g81&rid=giphy.gif&ct=g" alt="" />
+          <img class="skill-img2" src="https://media3.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif?cid=ecf05e47l0fxjozvytlhy4bl2eywdt8do7ctdmzjpvsa0g81&rid=giphy.gif&ct=g" alt="" />
          
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>
+          <h3 class="skill-text">Lorem Ipsum Dolor</h3>
+          <p class="skill-text">
             Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
             bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
             eu, rutrum nam.
