--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <h1>I'm Saad</h1>
       <h2 class="description">a <span class="pro">pro</span>grammer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
+      <!-- <img class="mountain" src="images/mountain.png" alt="mountain-image" /> -->
       <img class="mountain" src="images/mountain.png" alt="mountain-image" />
+      
     </div>
 
     <div class="middle-container">
