--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
-      <h1>I'm Saad</h1>
+      <h1 class="saad-intro">I'm Saad</h1>
       <h2 class="description">a <span class="pro">pro</span>grammer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
       <!-- <img class="mountain" src="images/mountain.png" alt="mountain-image" /> -->
@@ -39,7 +39,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images/saad2.png" alt="Saad's picture" />
+        <img class="saad-img" src="images/saad2.png" alt="Saad's picture" />
         <h2>Hello.</h2>
         <p>
           Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
@@ -81,11 +81,13 @@
       </div>
     </div>
 
+    <!-- <hr> -->
+
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/saad-rahman-59696a1bb/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/TechGuySaad">Twitter</a>
       <a class="footer-link" href="https://techguysaad.github.io/personalblog.github.io/">Website</a>
-      <p>© Name Surname.</p>
+      <p class="footer-name">© Name Surname.</p>
     </div>
   </body>
 </html>
