--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
+      <!-- <img class="top-cloud" src="images/cloud.png" alt="cloud-image" /> -->
       <h1 class="saad-intro">I'm Saad</h1>
-      <h2 class="description">a <span class="pro">pro</span>grammer</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
+      <img src="images/title-img.jpg" alt="title-img" class="title-img">
+      <!-- <h2 class="description">a <span class="pro">pro</span>grammer</h2> -->
+      <!-- <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" /> -->
       <!-- <img class="mountain" src="images/mountain.png" alt="mountain-image" /> -->
-      <img class="mountain" src="images/mountain.png" alt="mountain-image" />
+      <!-- <img class="mountain" src="images/mountain.png" alt="mountain-image" /> -->
       
     </div>
 
