--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
     />
 
     <!-- importing font Montserrat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Importing font mukta -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mukta&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Importing cedarville cursive -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Saad Rahman</title>
   </head>
@@ -30,12 +52,11 @@
     <div class="top-container">
       <!-- <img class="top-cloud" src="images/cloud.png" alt="cloud-image" /> -->
       <h1 class="saad-intro">I'm Saad</h1>
-      <img src="images/title-img.jpg" alt="title-img" class="title-img">
-      <!-- <h2 class="description">a <span class="pro">pro</span>grammer</h2> -->
+      <img src="images/title-img.jpg" alt="title-img" class="title-img" />
+      <h2 class="description">A Frontend Web Developer</h2>
       <!-- <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" /> -->
       <!-- <img class="mountain" src="images/mountain.png" alt="mountain-image" /> -->
       <!-- <img class="mountain" src="images/mountain.png" alt="mountain-image" /> -->
-      
     </div>
 
     <div class="middle-container">
@@ -51,7 +72,11 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="skill-img" src="https://media3.giphy.com/media/QssGEmpkyEOhBCb7e1/giphy.gif?cid=ecf05e47jvat1z1a73lc56cscsd21l6sznh2qui5vxhyf1h6&rid=giphy.gif&ct=s" alt="" />
+          <img
+            class="skill-img"
+            src="https://media3.giphy.com/media/QssGEmpkyEOhBCb7e1/giphy.gif?cid=ecf05e47jvat1z1a73lc56cscsd21l6sznh2qui5vxhyf1h6&rid=giphy.gif&ct=s"
+            alt=""
+          />
           <h3 class="skill-text">Lorem & Ipsum</h3>
           <p class="skill-text">
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
@@ -60,8 +85,12 @@
           </p>
         </div>
         <div class="skill-row">
-          <img class="skill-img2" src="https://media3.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif?cid=ecf05e47l0fxjozvytlhy4bl2eywdt8do7ctdmzjpvsa0g81&rid=giphy.gif&ct=g" alt="" />
-         
+          <img
+            class="skill-img2"
+            src="https://media3.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif?cid=ecf05e47l0fxjozvytlhy4bl2eywdt8do7ctdmzjpvsa0g81&rid=giphy.gif&ct=g"
+            alt=""
+          />
+
           <h3 class="skill-text">Lorem Ipsum Dolor</h3>
           <p class="skill-text">
             Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
@@ -85,9 +114,17 @@
     <!-- <hr> -->
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/saad-rahman-59696a1bb/">LinkedIn</a>
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/saad-rahman-59696a1bb/"
+        >LinkedIn</a
+      >
       <a class="footer-link" href="https://twitter.com/TechGuySaad">Twitter</a>
-      <a class="footer-link" href="https://techguysaad.github.io/personalblog.github.io/">Website</a>
+      <a
+        class="footer-link"
+        href="https://techguysaad.github.io/personalblog.github.io/"
+        >Website</a
+      >
       <p class="footer-name">© Name Surname.</p>
     </div>
   </body>
