added images to page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <body>
     <div class="top-container">
       <!-- <img class="top-cloud" src="images/cloud.png" alt="cloud-image" /> -->
+      <img src="images/title-img3.jpg" alt="title-img3" class="title-img3" />
       <h1 class="saad-intro">I'm Saad</h1>
       <img src="images/title-img.jpg" alt="title-img" class="title-img" />
       <h2 class="description">A Frontend Web Developer</h2>
