added hover affect to links

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         href="https://techguysaad.github.io/personalblog.github.io/"
         >Website</a
       >
-      <p class="footer-name">© Name Surname.</p>
+      <p class="footer-name">©2021 Saad Rahman</p>
     </div>
   </body>
 </html>
